--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -1,43 +1,89 @@
 {% extends "base.html" %}
-
 {% block content %}
+{% load bootstrap3 %}
 
-    <h1>Variant Dashboard</h1>
 
-    <div class="row">
-        <table class="table" width="100%" border="1.5px">
-            <thead>
-              <tr>
-                <th scope="col">Patient Name</th>
-                <th scope="col">Patient Age</th>
-                <th scope="col">Disease Stage</th>     
-                <th scope="col">Disease Decription</th>     
-                <th scope="col">Sequencer</th>
-                <th scope="col">Gene</th>   
-                <th scope="col">Variant cDNA</th>     
-                <th scope="col">Variant Protein</th>     
-                <th scope="col">Variant Genome</th>     
-                <th scope="col">Variant Classification</th>     
-              </tr>
-            </thead>
-            <tbody>
-              {% for variant in data %}
-              <tr>
-              <th scope="row">{{ forloop.counter }}</th>
-                <td>{{Variants.Name}}</td>
-                <td>{{Variants.Age}}</td>
-                <td>{{Variants.Stage}}</td>
-                <td>{{Variants.Description}}</td>
-                <td>{{Variants.Sequencer}}</td>
-                <td>{{Variants.Gene}}</td>
-                <td>{{Variants.cDNA}}</td>
-                <td>{{Variants.Protein}}</td> 
-                <td>{{Variants.Genome}}</td> 
-                <td>{{Variants.Classification}}</td>    
-              {% endfor %}
-              </tr>
-            </tbody>
-          </table>
+<!-- Adding header -->
+<div class="panel panel-default">
+    <div class="panel-heading ">
+        <div>
+            <h1>
+                Variant Dashboard
+            </h1>
+            <p>
+                Current variant information in the database. help text...
+            </p>
+        </div>
     </div>
+   
+
+    <!-- Adding data table -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h4>{% bootstrap_label "Variant Information"%}</h4>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="table-responsive">
+                                <table width="100%" class="table table-striped table-bordered table-hover"
+                                    id="main_datatable">
+                                    <thead>
+                                        <tr>
+                                            <!-- Adding table column headers -->
+                                            <th>Patient Name</th>
+                                            <th>Patient Age</th>
+                                            <th>Disease Stage</th>     
+                                            <th>Disease Decription</th>     
+                                            <th>Sequencer</th>
+                                            <th>Gene</th>   
+                                            <th>Variant cDNA</th>     
+                                            <th>Variant Protein</th>     
+                                            <th>Variant Genome</th>     
+                                            <th>Variant Classification</th> 
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for variant in data %} <!-- Loading in data specified in views.py -->
+                                        <tr>
+                                            <!-- Adding table column data -->
+                                            <td>{{ variant.Name }}</td>
+                                            <td>{{ variant.Age }}</td>
+                                            <td>{{ variant.Stage }}</td>
+                                            <td>{{ variant.Description }}</td>
+                                            <td>{{ variant.Sequencer }}</td>
+                                            <td>{{ variant.Gene }}</td>
+                                            <td>{{ variant.cDNA }}</td>
+                                            <td>{{ variant.Protein }}</td>
+                                            <td>{{ variant.Genome }}</td>
+                                            <td>{{ variant.Classification }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+
+
+<!-- CDN Links to activate datatables with sorting functionallity -->
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.18/css/dataTables.bootstrap.min.css">
+<script src= "https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
+<script src= "https://cdn.datatables.net/1.10.18/js/dataTables.bootstrap.min.js"></script>
+
+<!-- run javascript to display datatable -->
+<script>
+    $(document).ready(function () {
+        $('#main_datatable').DataTable({responsive:true,
+                                        order:[[1, "asc"], [0, "asc"]]})
+                                        });
+</script>
+
 
 {% endblock %}
+</html>
