Fixed table header error.

--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -35,7 +35,7 @@
                                             <th>Patient Name</th>
                                             <th>Patient Age</th>
                                             <th>Disease Stage</th>     
-                                            <th>Disease Decription</th>     
+                                            <th>Disease Description</th>     
                                             <th>Sequencer</th>
                                             <th>Gene</th>   
                                             <th>Variant cDNA</th>     
