Testing front-end redirection if search field is empty.

--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -52,7 +52,7 @@
 
             // This will send you back to home if query is invalid. Can edit to change behaviour.
             else {
-                
+                window.location.href ("/");
 
             }
         }
