--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,27 @@
 <html lang="en">
   <head>
     {% block title %}
-      <title>Variant Dashboard</title>
+      <title>VARIANT DASHBOARD</title>
     {% endblock %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      .sidebar-link {
+        display: block;
+        padding: 10px;
+        text-decoration: none;
+        font-family: 'Helvetica', sans-serif;
+        color: white;
+        background-color: #3498db;
+        border-radius: 5px;
+        margin-bottom: 5px;
+      }
+
+      .sidebar-link:hover {
+        background-color: #2980b9;
+      }
+
+    </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,8 +38,8 @@
         <div class="col-sm-2">
           {% block sidebar %}
             <ul class="sidebar-nav">
-              <li><a href="{% url 'home' %}">Home</a></li>
-              <li><a href="{% url 'addvariant' %}">Add New Variant</a></li>
+              <li><a href="{% url 'home' %}" class="sidebar-link">HOME</a></li>
+              <li><a href="{% url 'addvariant' %}" class="sidebar-link">ADD VARIANT</a></li>
             </ul>
           {% endblock %}
         </div>
