Added message to the top of the dashboard to inform user to return to home after searching.

--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -12,6 +12,8 @@
             </h1>
             <p>
                 Current variant information in the database. help text...
+                Please note: after performing a search function, you must return to the homepage,
+                otherwise the search function will not work.
             </p>
         </div>
     </div>
