--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -15,6 +15,12 @@
     p {
         font-family: 'Helvetica', sans-serif; 
     }
+    button {
+        margin-top: 10px;
+    }
+    label {
+        margin-top: 10px;
+    }
 </style>
 <!-- Adding header -->
 <div class="panel panel-default">
@@ -54,7 +60,7 @@
         <label for="filter">Filter:</label>
         <input type="text" id="filter" name="filter">
     </div>
-    <button onclick="search()">Search</button>
+    <button onclick="search()">SEARCH</button>
     
     <script>
 
@@ -75,7 +81,7 @@
         }
     </script>
 
-    
+    <br> </br>
 
     <!-- Adding data table -->
         <div class="row">
