--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -12,8 +12,12 @@
             </h1>
             <p>
                 Current variant information in the database. help text...
-                Please note: after performing a search function, you must return to the homepage,
-                otherwise the search function will not work.
+            <p> 
+            </h1> 
+                
+                 <h6 style="color:#13BEC2;">
+                    <b> Please note: </b> after performing a search query, you must return to the homepage, otherwise the search function will not work.  
+                </h6>
             </p>
         </div>
     </div>
