--- a/templates/base.html
+++ b/templates/base.html
@@ -22,16 +22,20 @@
         background-color: #2980b9;
       }
 
+
     </style>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous" />
+
     <!-- Add additional CSS in static file -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   </head>
+
   <body>
     <div class="container-fluid">
       <div class="row">
@@ -39,11 +43,16 @@
           {% block sidebar %}
             <ul class="sidebar-nav">
               <li><a href="{% url 'home' %}" class="sidebar-link">HOME</a></li>
+              <li><a href="{% url 'summary' %}" class="sidebar-link">SUMMARY</a></li>
               <li><a href="{% url 'addvariant' %}" class="sidebar-link">ADD VARIANT</a></li>
             </ul>
           {% endblock %}
         </div>
-        <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+
+        <!-- page content -->
+        <div class="col-sm-10 " id="content">
+          {% block content %}{% endblock %}
+        </div>
       </div>
     </div>
   </body>
